# ccl-framework

./: .gitignore  .gitmodules  changelog.md  cpphint.json  license.md  readme.md
ccl/app/: application.cpp  application.h  applicationspecifics.cpp  applicationspecifics.h  component.cpp  component.h  componentalias.cpp  componentalias.h  componentaliasfactory.h  componentfactory.cpp  componentfactory.h  debugmenu.cpp  debugmenu.h  modulecomponent.cpp  modulecomponent.h  paramalias.cpp  paramalias.h  paramcontainer.cpp  paramcontainer.h  params.cpp  params.h
ccl/base/: asyncoperation.cpp  asyncoperation.h  boxedtypes.cpp  boxedtypes.h  development.cpp  development.h  initterm.h  kernel.cpp  kernel.h  memorypool.cpp  memorypool.h  message.cpp  message.h  metaclass.cpp  metaclass.h  object.cpp  object.h  objectconverter.cpp  objectconverter.h  objectmacros.h  objectnode.cpp  objectnode.h  performance.cpp  performance.h  signalslot.cpp  signalslot.h  signalsource.cpp  signalsource.h  singleton.h  trigger.cpp  trigger.h  typelib.cpp  typelib.h  unittest.cpp  unittest.h
ccl/cmake/: CMakeLists.txt  ccl-config.cmake  ccl-install.android.cmake  ccl-install.cmake  ccl-install.linux.cmake  ccl-install.mac.cmake  ccl-install.win.cmake  cclapp.cmake  cclbase.android.cmake  cclbase.cmake  cclbase.ios.cmake  cclbase.mac.cmake  cclbase.win.cmake  cclextras-analytics.cmake  cclextras-devices.cmake  cclextras-extensions.cmake  cclextras-firebase.cmake  cclextras-gadgets.cmake  cclextras-packages.cmake  cclextras-packages.win.cmake  cclextras-portable.cmake  cclextras-stores.android.cmake  cclextras-stores.cmake  cclextras-stores.ios.cmake  cclextras-stores.mac.cmake  cclextras-stores.win.cmake  cclextras-tools.cmake  cclextras-web.cmake  cclextras-webfs.cmake  cclgui.android.cmake  cclgui.cmake  cclgui.ios.cmake  cclgui.linux.cmake  cclgui.mac.cmake  cclgui.win.cmake  cclmacros.android.cmake  cclmacros.cmake  cclmacros.ios.cmake  cclmacros.linux.cmake  cclmacros.mac.cmake  (+32 more)
ccl/cmake/visualstudio/: cclbase.natstepfilter  cclbase.natvis  cclextras.natvis  cclgui.natstepfilter  cclgui.natvis  ccltext.natstepfilter  ccltext.natvis  mklink_natstepfilter.cmd
ccl/gui/: commands.cpp  commands.h  gui.cpp  gui.h  guihelper.cpp  guihelper.h  guiservices.cpp  guistubs.cpp  keyevent.cpp  keyevent.h  scriptgui.cpp  scriptgui.h
ccl/main/: backgroundservice.cpp  backgroundservice.h  cclargs.cpp  cclargs.h  cclconsolemain.cpp  ccldetection.h  cclinit.h  cclmain.cpp  cclmodmain.cpp  cclmodmain.empty.cpp  cclmodmain.h  cclstatic.cpp  cclstatic.h  cclterminate.h  platformmodule.h
ccl/meta/: generate_all.sh
ccl/network/: netdiscovery.cpp  netdiscovery.h  netservices.cpp  netsocket.cpp  netsocket.h  netsslsocket.cpp  netsslsocket.h  netstream.cpp  netstream.h  network.cpp  network.h
ccl/public/: atomicexports.h  cclappiids.cpp  cclbaseiids.cpp  cclexports.h  cclextraiids.cpp  cclguiiids.cpp  cclnetiids.cpp  cclversion.h  guiservices.h  netservices.h  plugservices.h  securityservices.h  systemservices.h  textservices.h
classmodels/: Core Skin Elements.classModel  Cross-platform GUI Framework.classModel  Cross-platform Security Framework.classModel  Cross-platform System Framework.classModel  InstallData.classModel  MetaInfo.classModel  Skin Elements.classModel  Visual Styles.classModel
core/cmake/: CMakeLists.txt  coreextras-extensions.cmake  coreextras-games.cmake  coreextras-web.cmake  corelib-config.cmake  corelib.android.cmake  corelib.ios.cmake  corelib.linux.cmake  corelib.mac.cmake  corelib.win.cmake  corelib.zephyr.cmake  coremacros.android.cmake  coremacros.cmake  coremacros.ios.cmake  coremacros.linux.cmake  coremacros.mac.cmake  coremacros.win.cmake  coretest.cmake
core/cmake/visualstudio/: corelib.natstepfilter  corelib.natvis
tools/ccl/builder/cmake/: CMakeLists.txt  cclbuilder.linux.cmake  cclbuilder.mac.cmake  cclbuilder.win.cmake
tools/ccl/builder/templates/apptemplate/cmake/: CMakeLists.txt  apptemplate.android.cmake  apptemplate.ios.cmake  apptemplate.linux.cmake  apptemplate.mac.cmake  apptemplate.win.cmake
tools/ccl/builder/templates/cclextensiontemplate/development/: CMakeLists.txt
tools/ccl/builder/templates/consoleapptemplate/cmake/: CMakeLists.txt  apptemplate.linux.cmake  apptemplate.mac.cmake  apptemplate.win.cmake
tools/ccl/builder/templates/coreapptemplate/cmake/: CMakeLists.txt  apptemplate.win.cmake
tools/ccl/builder/templates/coreextensiontemplate/development/: CMakeLists.txt
tools/ccl/builder/templates/coreplugintemplate/cmake/: CMakeLists.txt
tools/ccl/builder/templates/servicetemplate/cmake/: CMakeLists.txt  servicetemplate-config.cmake  servicetemplate.ios.cmake  servicetemplate.linux.cmake
tools/ccl/cmake/: CMakeLists.txt  ccltools-config.cmake  signing.cmake
tools/ccl/crypt/cmake/: CMakeLists.txt  crypt.linux.cmake  crypt.mac.cmake  crypt.win.cmake
tools/ccl/generator/cmake/: CMakeLists.txt  cclgenerator.linux.cmake  cclgenerator.mac.cmake  cclgenerator.win.cmake
tools/ccl/makebin/cmake/: CMakeLists.txt  makebin.linux.cmake  makebin.mac.cmake  makebin.win.cmake
tools/ccl/makeguid/cmake/: CMakeLists.txt  makeguid.linux.cmake  makeguid.mac.cmake  makeguid.win.cmake
tools/ccl/modeller/cmake/: CMakeLists.txt  modeller.linux.cmake  modeller.mac.cmake  modeller.win.cmake
tools/ccl/package/cmake/: CMakeLists.txt  cclpackage.linux.cmake  cclpackage.mac.cmake  cclpackage.win.cmake
tools/ccl/replacer/cmake/: CMakeLists.txt  cclreplacer.linux.cmake  cclreplacer.mac.cmake  cclreplacer.win.cmake
tools/ccl/script/cmake/: CMakeLists.txt  script.linux.cmake  script.mac.cmake  script.win.cmake
tools/ccl/testrunner/cmake/: CMakeLists.txt  testrunner.linux.cmake  testrunner.mac.cmake  testrunner.win.cmake
tools/ccl/xstring/cmake/: CMakeLists.txt  xstring.linux.cmake  xstring.mac.cmake  xstring.win.cmake
tools/core/bin2c/cmake/: CMakeLists.txt  bin2c.mac.cmake
tools/core/cmake/: CMakeLists.txt
tools/core/jsonconverter/cmake/: CMakeLists.txt  jsonconverter.mac.cmake
tools/core/skincrush/cmake/: CMakeLists.txt  skincrush.mac.cmake
(+3343 files in other folders)
